--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -9,7 +9,7 @@ source:
   sha256: 2c86ac6ce570c9e04f04da0cd5e7d3db346e4b5b1d006311606368f17c756ef9
 
 build:
-  number: 0
+  number: 1
   skip: true  # [win]
   script: {{ PYTHON }} -m pip install . -vv
 
@@ -23,11 +23,18 @@ requirements:
     - lxml >=3.8.0
     - libxml2
     - libxmlsec1
+    - setuptools_scm
   run:
     - python
     - lxml >=3.8.0
 
 test:
+  requires:
+    - pip
+  commands:
+    - pip check
+    # Check that the correct version is reported by pip
+    - "pip list --format json | grep '{\"name\": \"xmlsec\", \"version\": \"{{ version }}\"}'"
   imports:
     - xmlsec
 
@@ -41,3 +48,4 @@ about:
 extra:
   recipe-maintainers:
     - jaimergp
+    - xhochy
