--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -24,13 +24,13 @@ requirements:
     - python
     - pip
     - pkgconfig
-    - lxml >=3.8.0
+    - lxml >=3.8.0,!=4.7.0
     - libxml2
     - libxmlsec1
     - setuptools_scm
   run:
     - python
-    - lxml >=3.8.0
+    - lxml >=3.8.0,!=4.7.0
 
 test:
   requires:
