--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -17,7 +17,7 @@ requirements:
   build:
     - python                                 # [build_platform != target_platform]
     - cross-python_{{ target_platform }}     # [build_platform != target_platform]
-    - libxmlsec1                             # [build_platform != target_platform]
+    - libxmlsec1 <1.3.0a0                    # [build_platform != target_platform]
     - pkg-config
     - {{ compiler('c') }}
   host:
@@ -26,7 +26,7 @@ requirements:
     - pkgconfig
     - lxml >=3.8.0,!=4.7.0
     - libxml2
-    - libxmlsec1
+    - libxmlsec1 <1.3.0a0
     - setuptools_scm
   run:
     - python
