--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -7,6 +7,9 @@ package:
 source:
   url: https://pypi.io/packages/source/x/xmlsec/xmlsec-{{ version }}.tar.gz
   sha256: 916f5d78e8041f6cd9391abba659da8c94a4fef7196d126d40af1ff417f2cf86
+  patches:
+    # https://github.com/xmlsec/python-xmlsec/pull/264
+    - 264.patch
 
 build:
   number: 2
