--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -29,7 +29,7 @@ requirements:
     - pkgconfig
     - lxml >=3.8.0,!=4.7.0
     - libxml2
-    - libxmlsec1
+    - libxmlsec1 1.3.2
     - setuptools_scm
   run:
     - python
