--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -34,6 +34,8 @@ requirements:
   run:
     - python
     - lxml >=3.8.0,!=4.7.0
+    # Hard-pin this as 1.3.3 removed some deprecated functions.
+    - libxmlsec1 1.3.2
 
 test:
   requires:
