--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -28,6 +28,7 @@ requirements:
     - lxml >=3.8.0,!=4.7.0
     - libxml2
     - libxmlsec1 1.3.2
+    - setuptools
     - setuptools_scm
   run:
     - python
