--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -27,14 +27,12 @@ requirements:
     - pkgconfig
     - lxml >=3.8.0,!=4.7.0
     - libxml2
-    - libxmlsec1 1.3.2
+    - libxmlsec1
     - setuptools
     - setuptools_scm
   run:
     - python
     - lxml >=3.8.0,!=4.7.0
-    # Hard-pin this as 1.3.3 removed some deprecated functions.
-    - libxmlsec1 1.3.2
 
 test:
   requires:
