--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -33,6 +33,9 @@ requirements:
   run:
     - python
     - lxml >=3.8.0,!=4.7.0
+    # hard-pin libxmlsec1 as we are unsure whether they do proper semver
+    # https://github.com/conda-forge/xmlsec-feedstock/pull/22#issuecomment-2677831048
+    - libxmlsec1 ==1.3.7
 
 test:
   requires:
