--- a/conda-forge.yml
+++ b/conda-forge.yml
@@ -10,4 +10,4 @@ github:
   tooling_branch_name: main
 test: native_and_emulated
 conda_install_tool: pixi
-conda_build_tool: ratter-build
+conda_build_tool: rattler-build
